# autobacktest

./: .env.dist  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  lessons.md  program.md  pyproject.toml
.antigravity/: AGENT_GUIDELINES.md  PROJECT_CONTEXT.md  STATE_MEMORY.md  TECH_STACK.md
.github/workflows/: ci.yml
configs/: .gitignore  equal_weight.yaml  haa.yaml  momentum_rotation.yaml
docs/: about-project.md  api-reference.md  architecture.md  developer-setup.md  glossary.md  index.md  optimization-config-reference.md  strategy-guide.md  testing-guide.md  troubleshooting.md
scratch/: empirical_validation.py
src/autobacktest/: __init__.py  cli.py  config.py  gate.py  orchestrator.py  program.py
src/autobacktest/commands/: __init__.py  evaluate.py  init.py  llm_test.py  report.py  reset.py  run.py  spa.py
src/autobacktest/data/: __init__.py  base.py  cache.py  yfinance_provider.py
src/autobacktest/evaluator/: __init__.py  backtest.py  costs.py  cscv.py  deflated_sharpe.py  engine.py  evaluate.py  holdout.py  metrics.py  (+6 more)
strategies/: .gitignore  haa.py  momentum_rotation.py
strategies/equal_weight/: program.md  strategy.py
strategies/momentum_rotation/: program.md  strategy.py
tests/: __init__.py  conftest.py  test_backtest.py  test_borrow_costs.py  test_cache.py  test_cache_resilience.py  test_characterization_ast_linter.py  test_characterization_evaluate.py  test_characterization_orchestrator.py  test_cli_init.py  test_cli_report.py  test_cli_reset.py  test_codemod.py  test_config.py  test_config_jitter.py  test_config_schema.py  test_contract.py  test_cost_tracking.py  test_cscv.py  test_deflated_sharpe.py  test_diversity.py  test_due_diligence_config.py  test_dummy.py  test_early_stop.py  test_evaluate_cache.py  test_evaluator_extras.py  test_exploit_guard.py  test_gate.py  test_git_ops.py  test_graceful_shutdown.py  test_holdout_cap.py  test_ledger_store.py  test_ledoit_wolf.py  test_lessons.py  test_lessons_parsing.py  test_llm_base.py  test_llm_litellm.py  test_llm_mock.py  test_llm_prompts.py  test_monte_carlo.py  (+21 more)
tmp_test/: lessons.md
(+29 files in other folders)
