[project]
name = "autobacktest"
version = "0.1.0"
description = "Autonomous AI-driven strategy optimization loop"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AutoBacktest Contributors" }
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.12.0",
    "litellm>=1.35.0",
    "yfinance>=0.2.38",
    "pyarrow>=15.0.0",
    "pandas-market-calendars>=4.4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.40",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "structlog>=24.1.0",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
autobacktest = "autobacktest.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "hypothesis>=6.98.0",
    "vcrpy>=6.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "types-pyyaml>=6.0.12.20240311",
]

[tool.pytest.ini_options]
timeout = 30
addopts = "-v --tb=short --durations=10"
markers = [
    "slow: marks tests as slow orchestrator E2E tests (deselect with '-m \"not slow\"')",
    "e2e: end-to-end orchestrator tests",
    "sandbox: tests that spawn subprocesses for sandbox validation",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autobacktest"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".claude/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["autobacktest", "strategies", "tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "litellm.*",
    "pandas_market_calendars.*",
    "scipy.*",
    "joblib.*",
    "git.*",
    "typer.*",
    "yaml.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
